--- a/branches/zuso1.81/.classpath
+++ b/branches/zuso1.81/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry excluding="org/ansj/solr/" kind="src" path="src"/>
 	<classpathentry kind="src" path="conf"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.7.0_55"/>
 	<classpathentry kind="con" path="melibrary.com.genuitec.eclipse.j2eedt.core.MYECLIPSE_JAVAEE_5_CONTAINER"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/ansj/ansj-solr4.7.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/ansj/ansj_seg-1.4-min.jar"/>
