--- a/branches/zuso1.81/WebRoot/WEB-INF/web.xml
+++ b/branches/zuso1.81/WebRoot/WEB-INF/web.xml
@@ -201,5 +201,28 @@
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
   </welcome-file-list>
-
+  
+  <security-constraint>
+      <web-resource-collection>
+          <web-resource-name>Admin resources</web-resource-name>
+          <url-pattern>/admin/*</url-pattern>
+          <url-pattern>/update/*</url-pattern>
+          <http-method>GET</http-method>
+          <http-method>POST</http-method>
+      </web-resource-collection>
+      <auth-constraint>
+          <description>This applies only to the "admin" security role</description>
+          <role-name>admin</role-name>
+      </auth-constraint>
+      <user-data-constraint>
+          <transport-guarantee>NONE</transport-guarantee>
+      </user-data-constraint>
+   </security-constraint>
+  
+   <login-config>
+       <auth-method>BASIC</auth-method>
+   </login-config>
+   <security-role>
+       <role-name>admin</role-name>
+   </security-role>
 </web-app>
